tutorials: shift numbering to match test categories

--- a/examples/tutorials/tutorial-5-operator.ipynb
+++ b/examples/tutorials/tutorial-5-operator.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we create and apply a CeedOperator for the mass matrix in 1D. By applying this operator to a vector of 1's, we compute the length of this 1D domain, similar to Ex1-Volume in the [tutorial1-ceed tutorial](./tutorial1-ceed.ipynb)"
+    "* In the following example, we create and apply a CeedOperator for the mass matrix in 1D. By applying this operator to a vector of 1's, we compute the length of this 1D domain, similar to Ex1-Volume in the [tutorial-6-shell tutorial](./tutorial-6-shell.ipynb)"
    ]
   },
   {
