--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -1,4 +1,22 @@
-@article{Brown:2010,
+@article{arruda1993largestretch,
+  title={A three-dimensional constitutive model for the large stretch behavior of rubber elastic materials},
+  author={Arruda, Ellen M and Boyce, Mary C},
+  journal={Journal of the Mechanics and Physics of Solids},
+  volume={41},
+  number={2},
+  pages={389--412},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@book{belytschko2013nonlinear,
+  title={Nonlinear finite elements for continua and structures},
+  author={Belytschko, Ted and Liu, Wing Kam and Moran, Brian and Elkhodary, Khalil},
+  year={2013},
+  publisher={John wiley \& sons}
+}
+
+@article{brown2010,
     Adsurl = {https://doi.org/10.1007/s10915-010-9396-8},
     Author = {{Brown}, J.},
     Journal = {Journal of Scientific Computing},
@@ -20,16 +38,13 @@
     doi = {10.1137/090775889}
 }
 
-@article{straka1993numerical,
-  title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
-  author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
-  journal={International Journal for Numerical Methods in Fluids},
-  volume={17},
-  number={1},
-  pages={1--22},
-  year={1993},
-  publisher={Wiley Online Library},
-  doi={10.1002/fld.1650170103}
+@Book{holzapfel2000nonlinear,
+ author={Holzapfel, Gerhard},
+ title={Nonlinear solid mechanics: a continuum approach for engineering},
+ publisher={Wiley},
+ year={2000},
+ address={Chichester New York},
+ isbn={978-0-471-82319-3}
 }
 
 @article{hughesetal2010,
@@ -49,21 +64,18 @@
   publisher={Courier Corporation}
 }
 
-@book{belytschko2013nonlinear,
-  title={Nonlinear finite elements for continua and structures},
-  author={Belytschko, Ted and Liu, Wing Kam and Moran, Brian and Elkhodary, Khalil},
-  year={2013},
-  publisher={John wiley \& sons}
+@article{straka1993numerical,
+  title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
+  author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={17},
+  number={1},
+  pages={1--22},
+  year={1993},
+  publisher={Wiley Online Library},
+  doi={10.1002/fld.1650170103}
 }
 
-@Book{holzapfel2000nonlinear,
- author={Holzapfel, Gerhard},
- title={Nonlinear solid mechanics: a continuum approach for engineering},
- publisher={Wiley},
- year={2000},
- address={Chichester New York},
- isbn={978-0-471-82319-3}
-}
 @article{williams2009roofline,
   title={Roofline: an insightful visual performance model for multicore architectures},
   author={Williams, Samuel and Waterman, Andrew and Patterson, David},
@@ -73,14 +85,4 @@
   pages={65--76},
   year={2009},
   publisher={ACM New York, NY, USA}
-}
-@article{arruda1993largestretch,
-  title={A three-dimensional constitutive model for the large stretch behavior of rubber elastic materials},
-  author={Arruda, Ellen M and Boyce, Mary C},
-  journal={Journal of the Mechanics and Physics of Solids},
-  volume={41},
-  number={2},
-  pages={389--412},
-  year={1993},
-  publisher={Elsevier}
 }
