Jupyter-notebook tutorials: Typo fix reported-by @LeilaGhaffari

--- a/examples/tutorials/tutorial-0-ceed.ipynb
+++ b/examples/tutorials/tutorial-0-ceed.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Ceed\n",
     "\n",
-    "Here we show some basic examples to illustrate the `Ceed` class. In libCEED, Ceeds represent library contextx representing control of logical hardware resources.\n",
+    "Here we show some basic examples to illustrate the `Ceed` class. In libCEED, Ceeds represent library context representing control of logical hardware resources.\n",
     "\n",
     "Here we illustrate the simple declaration of a `Ceed`, with default resource (which is `/cpu/self`)"
    ]
