--- a/examples/tutorials/tutorial-6-shell.ipynb
+++ b/examples/tutorials/tutorial-6-shell.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "The physical coordinates are denoted by $\\mathbf{x}=(x,y,z)\\in\\Omega_e$,\n",
     "while the reference coordinates are represented as\n",
-    "$\\boldsymbol{X}=(X,Y,Z) \\equiv (X_1,X_2,X_3) \\in\\mathbf{I}=[-1,1]^3$\n",
+    "$\\boldsymbol{X}=(X,Y,Z) \\equiv (X_1,X_2,X_3) \\in I=[-1,1]^3$\n",
     "(for $d=3$).\n",
     "\n",
     "### Ex1-Volume\n",
@@ -45,17 +45,17 @@
     "\n",
     "This example shows how to compute line/surface/volume integrals of a 1D, 2D, or 3D\n",
     "domain $\\Omega$ respectively, by applying the mass operator to a vector of\n",
-    "$\\mathbf{1}$s. It computes:\n",
+    "$1$s. It computes:\n",
     "\n",
     "$$\n",
-    "   I = \\int_{\\Omega} \\mathbf{1} \\, d V\\, .\n",
+    "   I = \\int_{\\Omega} 1 \\, dV .\n",
     "$$\n",
     "\n",
-    "We write here the vector $u(\\mathbf{x})\\equiv \\mathbf{1}$ in the Galerkin approximation,\n",
+    "We write here the vector $u(x)\\equiv 1$ in the Galerkin approximation,\n",
     "and find the volume of $\\Omega$ as\n",
     "\n",
     "$$\n",
-    "   \\sum_e \\int_{\\Omega_e} v(x) \\cdot \\mathbf{1} \\, dV\n",
+    "   \\sum_e \\int_{\\Omega_e} v(x) 1 \\, dV\n",
     "$$\n",
     "\n",
     "with $v(x) \\in \\mathcal{V}_p = \\{ v \\in H^{1}(\\Omega_e) \\,|\\, v \\in P_p(\\boldsymbol{I}), e=1,\\ldots,N_e \\}$,\n",
@@ -222,43 +222,29 @@
     "Similarly to the Ex1-Volume example, it computes:\n",
     "\n",
     "\\begin{equation}\\label{eq-ex2-surface}\\tag{eq. 1}\n",
-    "   I = \\int_{\\partial \\Omega} \\mathbf{1} \\, d S\\, .\n",
+    "   I =  \\int_{\\partial \\Omega} 1 \\, dS ,\n",
     "\\end{equation}\n",
     "\n",
-    "but this time by solving a Laplace's equation for a harmonic function\n",
-    "$u(\\mathbf{x})$. We write the Laplace's equation\n",
+    "by applying the divergence theorem.\n",
+    "In particular, we select $u(\\mathbf x) = x_0 + x_1 + x_2$, for which $\\nabla u = [1, 1, 1]^T$, and thus $\\nabla u \\cdot \\hat{\\mathbf n} = 1$.\n",
+    "\n",
+    "Given Laplace's equation,\n",
     "\n",
     "$$\n",
-    "   \\nabla \\cdot \\nabla u = 0, \\textrm{ for  } \\mathbf{x} \\in \\Omega.\n",
+    "   \\nabla \\cdot \\nabla u = 0, \\textrm{ for  } \\mathbf{x} \\in \\Omega ,\n",
     "$$\n",
     "\n",
-    "We can rewrite this via the bilinear form $a(\\cdot,\\cdot)$ and the linear form $\\langle \\cdot, \\cdot \\rangle$ as\n",
+    "let us multiply by a test function $v$ and integrate by parts to obtain\n",
     "\n",
     "$$\n",
-    "   a(u,v) = \\langle v, f \\rangle\n",
+    "   \\int_\\Omega \\nabla v \\cdot \\nabla u \\, dV - \\int_{\\partial \\Omega} v \\nabla u \\cdot \\hat{\\mathbf n}\\, dS = 0 .\n",
     "$$\n",
     "\n",
-    "where $v$ is the test function, and for which $\\langle v, f \\rangle=0$ in this case. We\n",
-    "obtain\n",
+    "Since we have chosen $u$ such that $\\nabla u \\cdot \\hat{\\mathbf n} = 1$, the boundary integrand is $v 1 \\equiv v$. Hence, similar to the previous example, we can evaluate the surface integral by applying the volumetric Laplacian as follows\n",
     "\n",
     "$$\n",
-    "   a(u,v)  = \\int_\\Omega v \\nabla \\cdot \\nabla u \\, d V =   \\int_{\\partial \\Omega} v \\nabla u \\cdot \\mathbf{n}\\, d S - \\int_\\Omega \\nabla v \\cdot \\nabla u \\, d V  = 0\\, ,\n",
-    "$$\n",
-    "\n",
-    "where we have used integration by parts.\n",
-    "\n",
-    "$a(u,v) = 0$ because we have chosen $u(\\mathbf{x})$ to be harmonic, so we\n",
-    "can write\n",
-    "\n",
-    "\\begin{equation}\\label{eq-laplace-by-parts}\\tag{eq. 2}\n",
-    "   \\int_{\\partial \\Omega} v \\nabla u \\cdot \\mathbf{n}\\, d S = \\int_\\Omega \\nabla v \\cdot \\nabla u \\, d V\n",
-    "\\end{equation}\n",
-    "\n",
-    "and use the `CeedOperator` for the Laplacian to compute the right-hand side of \n",
-    "\\ref{eq-laplace-by-parts}. This way, the left-hand side of \n",
-    "\\ref{eq-laplace-by-parts} (which gives \\ref{eq-ex2-surface} because\n",
-    "we have chosen $u(\\mathbf{x}) = (x + y + z)$ such that $\\nabla u \\cdot \\mathbf{n} = 1$)\n",
-    "is readily found."
+    "   \\int_\\Omega \\nabla v \\cdot \\nabla u \\, dV \\approx \\sum_e \\int_{\\partial \\Omega_e} v(x) 1 \\, dS .\n",
+    "$$"
    ]
   },
   {
