--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -8,3 +8,13 @@
     Year = 2010,
     doi = {10.1007/s10915-010-9396-8},
 }
+
+@article{Orszag:1980,
+    title = "Spectral methods for problems in complex geometries",
+    journal = "Journal of Computational Physics",
+    volume = "37",
+    pages = "70 - 92",
+    year = "1980",
+    doi = "https://doi.org/10.1016/0021-9991(80)90005-4",
+    author = "Steven A Orszag"
+}
