Tutorials - add cell discussing GPU vector support

--- a/examples/tutorials/tutorial-1-vector.ipynb
+++ b/examples/tutorials/tutorial-1-vector.ipynb
@@ -200,6 +200,31 @@
     "norm_max = x.norm(normtype=libceed.NORM_MAX)\n",
     "print(norm_max)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If you have installed libCEED with CUDA support and Numba, you can use device memory in your `CeedVector`s. In the following example, we create a `CeedVector` with a libCEED contex that supports CUDA, associate the data stored in a CeedVector with a `numpy.array`, and get a Numba `DeviceNDArray` containing the data on the device."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ceed_gpu = libceed.Ceed('/gpu/cuda')\n",
+    "\n",
+    "n = 10\n",
+    "x = ceed_gpu.Vector(n)\n",
+    "\n",
+    "a = np.arange(1, 1 + n, dtype=\"float64\")\n",
+    "x.set_array(a, cmode=libceed.USE_POINTER)\n",
+    "\n",
+    "with x.array_read(memtype=libceed.MEM_DEVICE) as device_array:\n",
+    "    print(device_array)"
+   ]
   }
  ],
  "metadata": {
