Tutorials - use libceed.class for python notebooks

--- a/examples/tutorials/tutorial-1-vector.ipynb
+++ b/examples/tutorials/tutorial-1-vector.ipynb
@@ -35,9 +35,9 @@
    "source": [
     "## CeedVector\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedVector` class. In libCEED, CeedVectors constitute the main data structure and serve as input/output for `CeedOperator`. \n",
+    "Here we show some basic examples to illustrate the `libceed.Vector` class. In libCEED, CeedVectors constitute the main data structure and serve as input/output for `libceed.Operator`. \n",
     "\n",
-    "We illustrate the simple creation of a `CeedVector`, how to specify its size, and how to read or manipulate its data."
+    "We illustrate the simple creation of a `libceed.Vector`, how to specify its size, and how to read or manipulate its data."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we associate the data stored in a `CeedVector` with a `numpy.array` and use it to set and read the CeedVector's data"
+    "* In the following example, we associate the data stored in a `libceed.Vector` with a `numpy.array` and use it to set and read the `libceed.Vector`'s data"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we set all entries to the same value and then visualize the `CeedVector`"
+    "* In the following example, we set all entries to the same value and then visualize the `libceed.Vector`"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we access and modify only one entry of the `CeedVector`"
+    "* In the following example, we access and modify only one entry of the `libceed.Vector`"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we compute the $L_1$, $L_2$ (default), and $L_{\\infty}$ norms of a `CeedVector` (keeping in mind that these are local norm computations; not accurate for parallel executions with no reductions)."
+    "* In the following example, we compute the $L_1$, $L_2$ (default), and $L_{\\infty}$ norms of a `libceed.Vector` (keeping in mind that these are local norm computations; not accurate for parallel executions with no reductions)."
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* If you have installed libCEED with CUDA support and Numba, you can use device memory in your `CeedVector`s. In the following example, we create a `CeedVector` with a libCEED contex that supports CUDA, associate the data stored in a CeedVector with a `numpy.array`, and get a Numba `DeviceNDArray` containing the data on the device."
+    "* If you have installed libCEED with CUDA support and Numba, you can use device memory in your `libceed.Vector`s. In the following example, we create a `libceed.Vector` with a libCEED contex that supports CUDA, associate the data stored in a CeedVector with a `numpy.array`, and get a Numba `DeviceNDArray` containing the data on the device."
    ]
   },
   {
