--- a/examples/tutorials/tutorial-2-elemrestriction.ipynb
+++ b/examples/tutorials/tutorial-2-elemrestriction.ipynb
@@ -35,9 +35,9 @@
    "source": [
     "## CeedElemRestriction\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedElemRestriction` class. In libCEED, a `CeedElemRestriction` groups the degrees of freedom (dofs) of the local vector according to the different elements they belong to (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition)).\n",
+    "Here we show some basic examples to illustrate the `libceed.ElemRestriction` class. In libCEED, a `libceed.ElemRestriction` groups the degrees of freedom (dofs) of the local vector according to the different elements they belong to (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition)).\n",
     "\n",
-    "Here we illustrate the simple creation and application of a `CeedElemRestriction`, with user provided dof indices"
+    "Here we illustrate the simple creation and application of a `libceed.ElemRestriction`, with user provided dof indices"
    ]
   },
   {
