--- a/examples/tutorials/tutorial-3-basis.ipynb
+++ b/examples/tutorials/tutorial-3-basis.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## CeedBasis\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedBasis` class. In libCEED, a `CeedBasis` defines the finite element basis and associated quadrature rule (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition))."
+    "Here we show some basic examples to illustrate the `libceed.Basis` class. In libCEED, a `libceed.Basis` defines the finite element basis and associated quadrature rule (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition))."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although a `Basis` is fully discrete, we can use the Lagrange construction to extend the basis to continuous functions by applying `EVAL_INTERP` to the identity.  This is the Vandermonde matrix of the continuous basis."
+    "Although a `libceed.Basis` is fully discrete, we can use the Lagrange construction to extend the basis to continuous functions by applying `EVAL_INTERP` to the identity.  This is the Vandermonde matrix of the continuous basis."
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although the underlying functions are not an intrinsic property of a `Basis` in `libceed`, the sizes are.\n",
+    "Although the underlying functions are not an intrinsic property of a `libceed.Basis` in libCEED, the sizes are.\n",
     "Here, we create a 3D tensor product element with more quadrature points than Lagrange interpolation nodes."
    ]
   },
