--- a/examples/tutorials/tutorial-5-operator.ipynb
+++ b/examples/tutorials/tutorial-5-operator.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## CeedOperator\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedOperator` class. In libCEED, a `CeedOperator` defines the finite/spectral element operator associated to a `QFunction` (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition))."
+    "Here we show some basic examples to illustrate the `libceed.Operator` class. In libCEED, a `libceed.Operator` defines the finite/spectral element operator associated to a `libceed.QFunction` (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition))."
    ]
   },
   {
@@ -123,13 +123,6 @@
     "with v.array_read() as v_array:\n",
     "  print('The length of the domain is l = %4.2f'%np.sum(v_array))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
