--- a/examples/tutorials/tutorial-4-qfunction.ipynb
+++ b/examples/tutorials/tutorial-4-qfunction.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## CeedQFunction\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedQFunction` class. In libCEED, QFunctions represent the spatial terms of the point-wise functions describing the physics at the quadrature points (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#api-description)). As shown in the following sketch, QFunctions (such as the one depicted, which defines the Laplacian) are point-wise functions defined at quadrature points. Hence, QFunctions are independent from element shape, resolution and order.\n",
+    "Here we show some basic examples to illustrate the `libceed.QFunction` class. In libCEED, QFunctions represent the spatial terms of the point-wise functions describing the physics at the quadrature points (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#api-description)). As shown in the following sketch, QFunctions (such as the one depicted, which defines the Laplacian) are point-wise functions defined at quadrature points. Hence, QFunctions are independent from element shape, resolution and order.\n",
     "\n",
     "![alt text][QFunctionSchematic]\n",
     "\n",
