Mention Numba for the Python interface and add related references

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -46,6 +46,18 @@
     year = "2020"
 }
 
+@misc{Numba,
+    title = "Numba",
+    url = "https://numba.pydata.org/",
+    year = "2020"
+}
+
+@misc{NumPy,
+    title = "Numpy",
+    url = "https://numpy.org/",
+    year = 2020
+}
+
 @misc{OCCAwebsite,
     title = "{OCCA} development site",
     url = "http://github.com/libocca/occa",
