Review feedback: Add CEED website and BP paper citations

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -9,10 +9,87 @@
     doi = {10.1007/s10915-010-9396-8},
 }
 
+@misc{CEEDMS25,
+  author       = {Brown, Jed and
+                  Abdelfattah, Ahmad and
+                  Barra, Valeria and
+                  Dobrev, Veselin and
+                  Dudouit, Yohann and
+                  Fischer, Paul and
+                  Kolev, Tzanio and
+                  Medina, David and
+                  Min, Misun and
+                  Ratnayaka, Thilina and
+                  Smith, Cameron and
+                  Thompson, Jeremy and
+                  Tomov, Stanimire and
+                  Tomov, Vladimir and
+                  Warburton, Tim},
+  title        = {{CEED ECP Milestone Report: Public release of CEED
+                   2.0}},
+  year         = 2019,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.2641316}
+}
+
+@misc{CEEDMS34,
+  author       = {Kolev, Tzanio and
+                  Fischer, Paul and
+                  Abdelfattah, Ahmad and
+                  Ananthan, Shreyas and
+                  Barra, Valeria and
+                  Beams, Natalie and
+                  Bleile, Ryan and
+                  Brown, Jed and
+                  Carson, Robert and
+                  Camier, Jean-Sylvain and
+                  Churchfield, Matthew and
+                  Dobrev, Veselin and
+                  Dongarra, Jack and
+                  Dudouit, Yohann and
+                  Karakus, Ali and
+                  Kerkemeier, Stefan and
+                  Lan, YuHsiang and
+                  Medina, David and
+                  Merzari, Elia and
+                  Min, Misun and
+                  Parker, Scott and
+                  Ratnayaka, Thilina and
+                  Smith, Cameron and
+                  Sprague, Michael and
+                  Stitt, Thomas and
+                  Thompson, Jeremy and
+                  Tomboulides, Ananias and
+                  Tomov, Stanimire and
+                  Tomov, Vladimir and
+                  Vargas, Arturo and
+                  Warburton, Tim and
+                  Weiss, Kenneth},
+  title        = {{CEED ECP Milestone Report: Improve performance and
+                   capabilities of CEED-enabled ECP applications on
+                   Summit/Sierra}},
+  year         = 2020,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.3860804}
+}
+
+@misc{CEEDwebsite,
+    title = "CEED",
+    url = "https://ceed.exascaleproject.org/",
+    year = "2020"
+}
+
 @misc{CUDAwebsite,
-    title = "https://developer.nvidia.com/about-cuda",
+    title = "CUDA",
     url = "https://developer.nvidia.com/about-cuda",
     year = "2020"
+}
+
+@article{Fischer2020scalability,
+  title={Scalability of high-performance PDE solvers},
+  author={Fischer, Paul and Min, Misun and Rathnayake, Thilina and Dutta, Som and Kolev, Tzanio and Dobrev, Veselin and Camier, Jean-Sylvain and Kronbichler, Martin and Warburton, Tim and Swirydowicz, Kasia and Jed Brown},
+  journal={(accepted) arXiv preprint arXiv:2004.06722v1},
+  year={2020}
 }
 
 @misc{libceed-dev-site,
