Update CEED BP paper info now that it's available online

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -87,9 +87,10 @@
 
 @article{Fischer2020scalability,
   title={Scalability of high-performance PDE solvers},
-  author={Fischer, Paul and Min, Misun and Rathnayake, Thilina and Dutta, Som and Kolev, Tzanio and Dobrev, Veselin and Camier, Jean-Sylvain and Kronbichler, Martin and Warburton, Tim and Swirydowicz, Kasia and Jed Brown},
-  journal={(accepted) arXiv preprint arXiv:2004.06722v1},
-  year={2020}
+  author={Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Veselin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia Świrydowicz and Jed Brown},
+  journal={The International Journal of High Performance Computing Applications},
+  year={2020},
+  doi = "10.1177/1094342020915762"
 }
 
 @misc{libceed-dev-site,
