--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -74,6 +74,15 @@
   volume={14},
   journal={International Journal for Numerical Methods in Fluids},
   doi={10.1002/fld.1650140506}
+
+@article{rancic,
+  author = {Rančić, M. and Purser, R. J. and Mesinger, F.},
+  title = {A global shallow-water model using an expanded spherical cube: Gnomonic versus conformal coordinates},
+  journal = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {122},
+  pages = {959-982},
+  doi = {10.1002/qj.49712253209},
+  year = {1996}
 }
 
 @article{straka1993numerical,
@@ -86,6 +95,25 @@
   year={1993},
   publisher={Wiley Online Library},
   doi={10.1002/fld.1650170103}
+}
+
+@article{taylor2010ACA,
+  title={A compatible and conservative spectral element method on unstructured grids},
+  author={Mark A. Taylor and Aim{\'e} Fournier},
+  journal={J. Comput. Phys.},
+  year={2010},
+  volume={229},
+  pages={5879-5895}
+}
+
+@Article{ullrich,
+  author = {Ullrich, P. A.},
+  title = {A global finite-element shallow-water model supporting continuous and discontinuous elements},
+  journal = {Geoscientific Model Development},
+  volume = {7},
+  year = {2014},
+  pages = {3017--3035},
+  doi = {10.5194/gmd-7-3017-2014}
 }
 
 @article{williams2009roofline,
