--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -99,6 +99,17 @@
   year = 2020
 }
 
+@InProceedings{libceed-paper-proc-scipy-2020,
+  author    = {{V}aleria {B}arra and {J}ed {B}rown and {J}eremy {T}hompson and {Y}ohann {D}udouit},
+  title     = {{H}igh-performance operator evaluations with ease of use: lib{C}{E}{E}{D}'s {P}ython interface},
+  booktitle = {{P}roceedings of the 19th {P}ython in {S}cience {C}onference},
+  pages     = {85 - 90},
+  year      = {2020},
+  editor    = {{M}eghann {A}garwal and {C}hris {C}alloway and {D}illon {N}iederhut and {D}avid {S}hupe},
+  doi       = {10.25080/Majora-342d178e-00c},
+  url       = {https://doi.org/10.25080/Majora-342d178e-00c}
+}
+
 @misc{LIBXSMM,
     title = "{LIBXSMM development site}",
     url = "http://github.com/hfp/libxsmm",
