Add HIP backend

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -84,7 +84,11 @@
     url = "https://developer.nvidia.com/about-cuda",
     year = "2020"
 }
-
+@misc{HIPwebsite,
+    title = "HIP",
+    url = "https://rocmdocs.amd.com/en/latest/Programming_Guides/HIP-GUIDE.html",
+    year = "2020"
+}
 @article{Fischer2020scalability,
   title={Scalability of high-performance PDE solvers},
   author={Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Veselin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia Świrydowicz and Jed Brown},
