--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -104,7 +104,7 @@
 }
 
 @InProceedings{libceed-paper-proc-scipy-2020,
-  author    = {{V}aleria {B}arra and {J}ed {B}rown and {J}eremy {T}hompson and {Y}ohann {D}udouit},
+  author    = {Valeria Barra and Jed Brown and Jeremy Thompson and Yohann Dudouit},
   title     = {{H}igh-performance operator evaluations with ease of use: lib{C}{E}{E}{D}'s {P}ython interface},
   booktitle = {{P}roceedings of the 19th {P}ython in {S}cience {C}onference},
   pages     = {85 - 90},
@@ -177,4 +177,16 @@
   institution = {Argonne National Laboratory},
   year   = 2020,
   number = {ANL-95/11 - Revision 3.13}
+}
+
+@article{straka1993numerical,
+  title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
+  author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={17},
+  number={1},
+  pages={1--22},
+  year={1993},
+  publisher={Wiley Online Library},
+  doi={10.1002/fld.1650170103}
 }
