Update latest pubs

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -9,6 +9,41 @@
     doi = {10.1007/s10915-010-9396-8},
 }
 
+@article{CEED-ECP-paper,
+  author  = {Kolev, Tzanio and
+             Fischer, Paul and
+             Min, Misun and
+             Dongarra, Jack and
+             Brown, Jed and
+             Dobrev, Veselin and
+             Warburton, Tim and
+             Tomov, Stanimire and
+             Shephard, Mark S. and
+             Abdelfattah, Ahmad and
+             Barra, Valeria and
+             Beams, Natalie and
+             Camier, Jean-Sylvain and
+             Chalmers, Noel and
+             Dudouit, Yohann and
+             Karakus, Ali and
+             Karlin, Ian and
+             Kerkemeier, Stefan and
+             Lan, Yu-Hsiang and
+             Medina, David and
+             Merzari, Elia and
+             Obabko, Aleksandr and
+             Pazner, Will and
+             Rathnayake, Thilina and
+             Smith, Cameron W. and
+             Spies, Lukas and
+             Swirydowicz, Kasia and
+             Thompson, Jeremy and
+             Tomboulides, Ananias and
+             Tomov, Vladimir},
+  title   = {Efficient Exascale Discretizations},
+  journal = {The International Journal of High Performance Computing Applications, in review}
+}
+
 @misc{CEEDMS25,
   author       = {Brown, Jed and
                   Abdelfattah, Ahmad and
@@ -99,8 +134,8 @@
 
 @misc{libceed-dev-site,
   title =  {lib{CEED} development site},
-  url =    {https://github.com/ceed/libceed},
-  year = 2020
+  url   =    {https://github.com/ceed/libceed},
+  year  = 2020
 }
 
 @InProceedings{libceed-paper-proc-scipy-2020,
@@ -131,6 +166,16 @@
     url = "https://mfem.org/",
     year = "2020",
     doi = "10.11578/dc.20171025.1248"
+}
+
+@article{mfem-paper,
+  title   = {{MFEM}: A Modular Finite Element Library},
+  author  = {R. Anderson and J. Andrej and A. Barker and J. Bramwell and J.-S. Camier and
+             J. Cerveny V. Dobrev and Y. Dudouit and A. Fisher and Tz. Kolev and W. Pazner and
+             M. Stowell and V. Tomov and I. Akkerman and J. Dahm and D. Medina and S. Zampini},
+  journal = {Computers \& Mathematics with Applications},
+  doi     = {10.1016/j.camwa.2020.06.009},
+  year    = {2020}
 }
 
 @misc{Nekwebsite,
