JOSS: Mention Julia interface. Add Will to authors.

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -235,3 +235,15 @@
   publisher={Wiley Online Library},
   doi={10.1002/fld.1650170103}
 }
+
+@article{Julia-2017,
+    title={Julia: A fresh approach to numerical computing},
+    author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+    journal={SIAM {R}eview},
+    volume={59},
+    number={1},
+    pages={65--98},
+    year={2017},
+    publisher={SIAM},
+    doi={10.1137/141000671}
+}
