JOSS - unify language references

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -1,12 +1,19 @@
 @article{Brown:2010,
-    Adsurl = {https://doi.org/10.1007/s10915-010-9396-8},
-    Author = {{Brown}, J.},
-    Journal = {Journal of Scientific Computing},
-    Volume = 45,
-    Month = oct,
-    Title = {{Efficient Nonlinear Solvers for Nodal High-Order Finite Elements in 3D}},
-    Year = 2010,
-    doi = {10.1007/s10915-010-9396-8},
+  Adsurl = {https://doi.org/10.1007/s10915-010-9396-8},
+  Author = {{Brown}, J.},
+  Journal = {Journal of Scientific Computing},
+  Volume = 45,
+  Month = oct,
+  Title = {{Efficient Nonlinear Solvers for Nodal High-Order Finite Elements in 3D}},
+  Year = 2010,
+  doi = {10.1007/s10915-010-9396-8},
+}
+
+@misc{C99-lang,
+  title={ISO/IEC 9899: 1999 Programming Languages-C},
+  author={Organisation, IS},
+  year={1999},
+  publisher={American National Standards Institute, New York}
 }
 
 @article{CEED-ECP-paper,
@@ -109,27 +116,48 @@
 }
 
 @misc{CEEDwebsite,
-    title = "CEED",
-    url = "https://ceed.exascaleproject.org/",
-    year = "2020"
+  title = "CEED",
+  url = "https://ceed.exascaleproject.org/",
+  year = "2020"
 }
 
 @misc{CUDAwebsite,
-    title = "CUDA",
-    url = "https://developer.nvidia.com/about-cuda",
-    year = "2020"
+  title = "CUDA",
+  url = "https://developer.nvidia.com/about-cuda",
+  year = "2020"
 }
-@misc{HIPwebsite,
-    title = "HIP",
-    url = "https://rocmdocs.amd.com/en/latest/Programming_Guides/HIP-GUIDE.html",
-    year = "2020"
-}
+
 @article{Fischer2020scalability,
   title={Scalability of high-performance PDE solvers},
   author={Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Veselin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia Świrydowicz and Jed Brown},
   journal={The International Journal of High Performance Computing Applications},
   year={2020},
   doi = "10.1177/1094342020915762"
+}
+
+@book{Fortran77-lang,
+  title={American national standard programming language COBOL},
+  author={American National Standards Institute},
+  year={1978},
+  publisher={ANSI}
+}
+
+@misc{HIPwebsite,
+  title = "HIP",
+  url = "https://rocmdocs.amd.com/en/latest/Programming_Guides/HIP-GUIDE.html",
+  year = "2020"
+}
+
+@article{Julia-lang,
+  title={Julia: A fresh approach to numerical computing},
+  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal={SIAM {R}eview},
+  volume={59},
+  number={1},
+  pages={65--98},
+  year={2017},
+  publisher={SIAM},
+  doi={10.1137/141000671}
 }
 
 @misc{libceed-dev-site,
@@ -150,22 +178,22 @@
 }
 
 @misc{LIBXSMM,
-    title = "{LIBXSMM development site}",
-    url = "http://github.com/hfp/libxsmm",
-    year = "2020"
+  title = "{LIBXSMM development site}",
+  url = "http://github.com/hfp/libxsmm",
+  year = "2020"
 }
 
 @misc{MAGMAwebsite,
-    title = "{MAGMA development site}",
-    url = "https://bitbucket.org/icl/magma",
-    year = "2020"
+  title = "{MAGMA development site}",
+  url = "https://bitbucket.org/icl/magma",
+  year = "2020"
 }
 
 @misc{MFEMlibrary,
-    title = "{MFEM}: {Modular Finite Element Methods Library}",
-    url = "https://mfem.org/",
-    year = "2020",
-    doi = "10.11578/dc.20171025.1248"
+  title = "{MFEM}: {Modular Finite Element Methods Library}",
+  url = "https://mfem.org/",
+  year = "2020",
+  doi = "10.11578/dc.20171025.1248"
 }
 
 @article{mfem-paper,
@@ -179,37 +207,37 @@
 }
 
 @misc{Nekwebsite,
-    title = "Nek5000",
-    url = "https://nek5000.mcs.anl.gov/",
-    year = "2020"
+  title = "Nek5000",
+  url = "https://nek5000.mcs.anl.gov/",
+  year = "2020"
 }
 
 @misc{Numba,
-    title = "Numba",
-    url = "https://numba.pydata.org/",
-    year = "2020"
+  title = "Numba",
+  url = "https://numba.pydata.org/",
+  year = "2020"
 }
 
 @misc{NumPy,
-    title = "Numpy",
-    url = "https://numpy.org/",
-    year = 2020
+  title = "Numpy",
+  url = "https://numpy.org/",
+  year = 2020
 }
 
 @misc{OCCAwebsite,
-    title = "{OCCA} development site",
-    url = "http://github.com/libocca/occa",
-    year = "2020"
+  title = "{OCCA} development site",
+  url = "http://github.com/libocca/occa",
+  year = "2020"
 }
 
 @article{Orszag:1980,
-    title = "Spectral methods for problems in complex geometries",
-    journal = "Journal of Computational Physics",
-    volume = "37",
-    pages = "70 - 92",
-    year = "1980",
-    doi = "https://doi.org/10.1016/0021-9991(80)90005-4",
-    author = "Steven A Orszag"
+  title = "Spectral methods for problems in complex geometries",
+  journal = "Journal of Computational Physics",
+  volume = "37",
+  pages = "70 - 92",
+  year = "1980",
+  doi = "https://doi.org/10.1016/0021-9991(80)90005-4",
+  author = "Steven A Orszag"
 }
 
 @TechReport{PETScUserManual,
@@ -224,6 +252,18 @@
   number = {ANL-95/11 - Revision 3.13}
 }
 
+@misc{Python-lang,
+  title = "Python",
+  url = "https://www.python.org/",
+  year = "2020",
+}
+
+@misc{Rust-lang,
+  title = "Rust",
+  url = "https://www.rust-lang.org/",
+  year = "2020",
+}
+
 @article{straka1993numerical,
   title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
   author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
@@ -234,16 +274,4 @@
   year={1993},
   publisher={Wiley Online Library},
   doi={10.1002/fld.1650170103}
-}
-
-@article{Julia-2017,
-    title={Julia: A fresh approach to numerical computing},
-    author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
-    journal={SIAM {R}eview},
-    volume={59},
-    number={1},
-    pages={65--98},
-    year={2017},
-    publisher={SIAM},
-    doi={10.1137/141000671}
 }
