JOSS - fix bad copy-paste

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -136,10 +136,10 @@
 }
 
 @book{Fortran77-lang,
-  title={American national standard programming language COBOL},
-  author={American National Standards Institute},
-  year={1978},
-  publisher={ANSI}
+  title={Standard X3. 9-1978, Programming Language Fortran (revision of ANSI X2. 9-1966)},
+  author={ANSI, ANSI},
+  journal={New York: ANSI},
+  year={1978}
 }
 
 @misc{HIPwebsite,
