joss: fix Numba citation
https://numba.readthedocs.io/en/stable/user/faq.html?highlight=citing#how-do-i-reference-cite-acknowledge-numba-in-other-work

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -212,10 +212,22 @@
   year = "2020"
 }
 
-@misc{Numba,
-  title = "Numba",
-  url = "https://numba.pydata.org/",
-  year = "2020"
+@inproceedings{Numba,
+author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
+title = {Numba: A LLVM-Based Python JIT Compiler},
+year = {2015},
+isbn = {9781450340052},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2833157.2833162},
+doi = {10.1145/2833157.2833162},
+abstract = {Dynamic, interpreted languages, like Python, are attractive for domain-experts and scientists experimenting with new ideas. However, the performance of the interpreter is often a barrier when scaling to larger data sets. This paper presents a just-in-time compiler for Python that focuses in scientific and array-oriented computing. Starting with the simple syntax of Python, Numba compiles a subset of the language into efficient machine code that is comparable in performance to a traditional compiled language. In addition, we share our experience in building a JIT compiler using LLVM[1].},
+booktitle = {Proceedings of the Second Workshop on the LLVM Compiler Infrastructure in HPC},
+articleno = {7},
+numpages = {6},
+keywords = {compiler, LLVM, Python},
+location = {Austin, Texas},
+series = {LLVM '15}
 }
 
 @misc{NumPy,
