Add libCEED's user manual citing info
This replaces the dev site citing info from the README

--- a/doc/bib/references.bib
+++ b/doc/bib/references.bib
@@ -5,6 +5,29 @@
   year = 2020
 }
 
+@misc{libceed-user-manual,
+  author       = {Abdelfattah, Ahmad and
+                  Barra, Valeria and
+                  Beams, Natalie and
+                  Brown, Jed and
+                  Camier, Jean-Sylvain and
+                  Dobrev, Veselin and
+                  Dudouit, Yohann and
+                  Ghaffari, Leila and
+                  Kolev, Tzanio and
+                  Medina, David and
+                  Rathnayake, Thilina and
+                  Thompson, Jeremy L and
+                  Tomov, Stanimire},
+  title        = {libCEED User Manual},
+  month        = sep,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {0.7},
+  doi          = {10.5281/zenodo.4302737},
+  url          = {https://doi.org/10.5281/zenodo.4302737}
+}
+
 @InProceedings{libceed-paper-proc-scipy-2020,
   author    = {{V}aleria {B}arra and {J}ed {B}rown and {J}eremy {T}hompson and {Y}ohann {D}udouit},
   title     = {{H}igh-performance operator evaluations with ease of use: lib{C}{E}{E}{D}'s {P}ython interface},
