JOSS paper: substantial editing and figure adjustments

--- a/doc/papers/joss/paper.bib
+++ b/doc/papers/joss/paper.bib
@@ -11,7 +11,7 @@
 
 @misc{C99-lang,
   title={ISO/IEC 9899: 1999 Programming Languages-C},
-  author={Organisation, IS},
+  author={{International Standards Organisation}},
   year={1999},
   publisher={American National Standards Institute, New York}
 }
@@ -48,7 +48,8 @@
              Tomboulides, Ananias and
              Tomov, Vladimir},
   title   = {Efficient Exascale Discretizations},
-  journal = {The International Journal of High Performance Computing Applications, in review}
+  journal = {The International Journal of High Performance Computing Applications, in review},
+  year    = {2021}
 }
 
 @misc{CEEDMS25,
@@ -137,7 +138,7 @@
 
 @book{Fortran77-lang,
   title={Standard X3. 9-1978, Programming Language Fortran (revision of ANSI X2. 9-1966)},
-  author={ANSI, ANSI},
+  author={ANSI},
   journal={New York: ANSI},
   year={1978}
 }
@@ -310,6 +311,12 @@ series = {LLVM '15}
   year = "2020",
 }
 
+@misc{python-cffi,
+  title = "C Foreign Function Interface for {Python}",
+  url = "https://cffi.readthedocs.io",
+  year = "2020",
+}
+
 @article{straka1993numerical,
   title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
   author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
@@ -320,4 +327,56 @@ series = {LLVM '15}
   year={1993},
   publisher={Wiley Online Library},
   doi={10.1002/fld.1650170103}
+}
+
+@book{deville2002highorder,
+  title={High-order methods for incompressible fluid flow},
+  author={Deville, Michel O and Fischer, Paul F and Mund, Ernest H},
+  year={2002},
+  publisher={Cambridge University Press},
+  isbn={0-521-45309-7}
+}
+
+@article{gropp2014using,
+  title={Using {MPI}: Portable Parallel Programming with the Message-Passing Interface},
+  author={Gropp, William and Lusk, Ewing and Skjellum, Anthony},
+  year={2014},
+  publisher={The MIT Press},
+  isbn={9780262527392}
+}
+
+@article{libMeshPaper,
+  author = {Benjamin S. Kirk and John W. Peterson and Roy H. Stogner and Graham F. Carey},
+  title = {{\texttt{libMesh}: A C++ Library for Parallel Adaptive Mesh Refinement/Coarsening Simulations}},
+  journal = {Engineering with Computers},
+  volume = 22,
+  number = {3--4},
+  pages = {237--254},
+  year = 2006,
+  doi = {10.1007/s00366-006-0049-3}
+}
+
+@book{LoggMardalWells2012,
+  title  = {Automated solution of differential equations by the finite element method: The FEniCS book},
+  author = {Logg, Anders and Mardal, Kent-Andre and Wells, Garth},
+  volume = {84},
+  year   = {2012},
+  publisher = {Springer Science \& Business Media}
+}
+
+@article{dealII92,
+  title     = {The \texttt{deal.II} Library, Version 9.2},
+  author    = {Daniel Arndt and Wolfgang Bangerth and Bruno Blais and
+               Thomas C. Clevenger and Marc Fehling and Alexander V. Grayver and
+               Timo Heister and Luca Heltai and Martin Kronbichler and Matthias Maier and
+               Peter Munch and Jean-Paul Pelteret and Reza Rastak and
+               Ignacio Thomas and Bruno Turcksin and Zhuoran Wang and David Wells},
+  journal   = {Journal of Numerical Mathematics},
+  publisher = {De Gruyter},
+  year      = {2020},
+  volume    = {28},
+  number    = {3},
+  pages     = {131-146},
+  DOI       = {10.1515/jnma-2020-0043},
+  url       = {https://dealii.org/deal92-preprint.pdf}
 }
