doc: add missing DOIs

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -6,7 +6,8 @@
   number={2},
   pages={389--412},
   year={1993},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0022-5096(93)90013-6}
 }
 
 @book{belytschko2013nonlinear,
@@ -95,5 +96,6 @@
   number={4},
   pages={65--76},
   year={2009},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/1498765.1498785}
 }
